--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,3 +10899,21 @@ a.text-dark:focus {
   }
 }
 
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-header .card-body ul {
+  list-style: none;
+}
+
+.card-header .card-body .infobox {
+  padding: 10px 0;
+}
+
+.card-header .card-body .infobox h4 {
+  display: inline-block;
+}
+
